[package]
name = "rustyfixml"
version = { workspace = true }
edition = "2021"
description = "FIXML (XML-based FIX) encoding for RustyFix"
license = "MIT OR Apache-2.0"
repository = "https://github.com/rustyfix/rustyfix"
documentation = "https://docs.rs/rustyfixml"
keywords = ["fix", "fixml", "xml", "trading", "finance"]
categories = ["encoding", "finance", "network-programming"]

[dependencies]
# High-performance core dependencies
smallvec = { workspace = true }
fastrace = { workspace = true }
thiserror = { workspace = true }

# XML processing
quick-xml = { workspace = true }
serde = { workspace = true, features = ["derive"] }

# Optional features
chrono = { version = "0.4", optional = true }

[dev-dependencies]
proptest = "1.5"
criterion = { workspace = true, features = ["html_reports"] }
tokio = { workspace = true }

[features]
default = ["timestamps"]
timestamps = ["chrono"]
