[package]
name = "rustygpb"
version = { workspace = true }
edition = "2021"
description = "Protocol Buffers encoding for FIX messages in RustyFix"
license = "MIT OR Apache-2.0"
repository = "https://github.com/rustyfix/rustyfix"
documentation = "https://docs.rs/rustygpb"
keywords = ["fix", "protocol-buffers", "protobuf", "trading", "hft"]
categories = ["encoding", "finance", "network-programming"]

[dependencies]
# High-performance core dependencies
smallvec = { workspace = true }
fastrace = { workspace = true }
thiserror = { workspace = true }
zerocopy = { workspace = true }
simd_aligned = { workspace = true }

# Protocol Buffers
prost = "0.14"
prost-types = "0.14"
bytes = "1.7"
crc32c = "0.6"

# Optional serialization
serde = { workspace = true, optional = true }

[build-dependencies]
prost-build = "0.14"

[dev-dependencies]
proptest = "1.5"
criterion = { workspace = true, features = ["html_reports"] }

[features]
default = []
serde = ["dep:serde"]
